snapshots/tests/class/audiostation/audiostation_recorder_class_load.snap
---
source: vb6parse/tests/class/audiostation.rs
expression: class
---
header:
  version:
    major: 1
    minor: 0
  properties:
    multi_use: MultiUse
    persistable: NotPersistable
    data_binding_behavior: None
    data_source_behavior: None
    mts_transaction_mode: NotAnMTSObject
  attributes:
    name: AudiostationRecorder
    global_name_space: Local
    creatable: "True"
    predeclared_id: "False"
    exposed: "False"
    description: ~
    ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: OptionStatement
        children:
          - kind: OptionKeyword
            text: Option
          - kind: Whitespace
            text: " "
          - kind: ExplicitKeyword
            text: Explicit
          - kind: Newline
            text: "\n"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "' /////////////////////////////////////////////////////////////////////////////////"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "' Class:            AudiostationRecorder"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "' Description:      Adds recorder functionality to the Audiostation program"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "'"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "' Date Changed:     25-06-2022"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "' Date Created:     25-06-2022"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "' Author:           Sibra-Soft - Alex van den Berg"
      - kind: Newline
        text: "\n"
      - kind: EndOfLineComment
        text: "' /////////////////////////////////////////////////////////////////////////////////"
      - kind: Newline
        text: "\n"
      - kind: Newline
        text: "\n"
      - kind: DimStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Recording
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: BooleanKeyword
            text: Boolean
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Settings
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: CallKeyword
                    text: Call
                  - kind: Whitespace
                    text: " "
                  - kind: Identifier
                    text: Shell
                  - kind: LeftParenthesis
                    text: (
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: BinaryExpression
                            children:
                              - kind: MemberAccessExpression
                                children:
                                  - kind: Identifier
                                    text: App
                                  - kind: PeriodOperator
                                    text: "."
                                  - kind: Identifier
                                    text: path
                              - kind: Whitespace
                                text: " "
                              - kind: Ampersand
                                text: "&"
                              - kind: Whitespace
                                text: " "
                              - kind: StringLiteralExpression
                                children:
                                  - kind: StringLiteral
                                    text: "\"\\recorder.exe -settings\""
                      - kind: Comma
                        text: ","
                      - kind: Whitespace
                        text: " "
                      - kind: Argument
                        children:
                          - kind: IdentifierExpression
                            children:
                              - kind: Identifier
                                text: vbNormalFocus
                  - kind: RightParenthesis
                    text: )
                  - kind: Newline
                    text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: StartRecorder
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: CallKeyword
                    text: Call
                  - kind: Whitespace
                    text: " "
                  - kind: Identifier
                    text: Shell
                  - kind: LeftParenthesis
                    text: (
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: BinaryExpression
                            children:
                              - kind: MemberAccessExpression
                                children:
                                  - kind: Identifier
                                    text: App
                                  - kind: PeriodOperator
                                    text: "."
                                  - kind: Identifier
                                    text: path
                              - kind: Whitespace
                                text: " "
                              - kind: Ampersand
                                text: "&"
                              - kind: Whitespace
                                text: " "
                              - kind: StringLiteralExpression
                                children:
                                  - kind: StringLiteral
                                    text: "\"\\recorder.exe -record\""
                      - kind: Comma
                        text: ","
                      - kind: Whitespace
                        text: " "
                      - kind: Argument
                        children:
                          - kind: IdentifierExpression
                            children:
                              - kind: Identifier
                                text: vbNormalFocus
                  - kind: RightParenthesis
                    text: )
                  - kind: Newline
                    text: "\n"
              - kind: AssignmentStatement
                children:
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: Recording
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: BooleanLiteralExpression
                    children:
                      - kind: TrueKeyword
                        text: "True"
                  - kind: Newline
                    text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: StopRecorder
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: CallKeyword
                    text: Call
                  - kind: Whitespace
                    text: " "
                  - kind: Identifier
                    text: Shell
                  - kind: LeftParenthesis
                    text: (
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: BinaryExpression
                            children:
                              - kind: MemberAccessExpression
                                children:
                                  - kind: Identifier
                                    text: App
                                  - kind: PeriodOperator
                                    text: "."
                                  - kind: Identifier
                                    text: path
                              - kind: Whitespace
                                text: " "
                              - kind: Ampersand
                                text: "&"
                              - kind: Whitespace
                                text: " "
                              - kind: StringLiteralExpression
                                children:
                                  - kind: StringLiteral
                                    text: "\"\\recorder.exe -stop\""
                      - kind: Comma
                        text: ","
                      - kind: Whitespace
                        text: " "
                      - kind: Argument
                        children:
                          - kind: IdentifierExpression
                            children:
                              - kind: Identifier
                                text: vbNormalFocus
                  - kind: RightParenthesis
                    text: )
                  - kind: Newline
                    text: "\n"
              - kind: AssignmentStatement
                children:
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: Recording
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: BooleanLiteralExpression
                    children:
                      - kind: FalseKeyword
                        text: "False"
                  - kind: Newline
                    text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: SaveRecording
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: Identifier
                    text: StopRecorder
                  - kind: Newline
                    text: "\n"
              - kind: CallStatement
                children:
                  - kind: CallKeyword
                    text: Call
                  - kind: Whitespace
                    text: " "
                  - kind: Identifier
                    text: Shell
                  - kind: LeftParenthesis
                    text: (
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: BinaryExpression
                            children:
                              - kind: MemberAccessExpression
                                children:
                                  - kind: Identifier
                                    text: App
                                  - kind: PeriodOperator
                                    text: "."
                                  - kind: Identifier
                                    text: path
                              - kind: Whitespace
                                text: " "
                              - kind: Ampersand
                                text: "&"
                              - kind: Whitespace
                                text: " "
                              - kind: StringLiteralExpression
                                children:
                                  - kind: StringLiteral
                                    text: "\"\\recorder.exe -save\""
                      - kind: Comma
                        text: ","
                      - kind: Whitespace
                        text: " "
                      - kind: Argument
                        children:
                          - kind: IdentifierExpression
                            children:
                              - kind: Identifier
                                text: vbNormalFocus
                  - kind: RightParenthesis
                    text: )
                  - kind: Newline
                    text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
