snapshots/tests/class/audiostation/audiostation_volume_channel_class_load.snap
---
source: vb6parse/tests/class/audiostation.rs
expression: class
---
header:
  version:
    major: 1
    minor: 0
  properties:
    multi_use: MultiUse
    persistable: NotPersistable
    data_binding_behavior: None
    data_source_behavior: None
    mts_transaction_mode: NotAnMTSObject
  attributes:
    name: mdlVolumeChannel
    global_name_space: Local
    creatable: "True"
    predeclared_id: "False"
    exposed: "False"
    description: ~
    ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: DimStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Path
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: StringKeyword
            text: String
          - kind: Newline
            text: "\n"
      - kind: DimStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: NameKeyword
            text: Name
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: StringKeyword
            text: String
          - kind: Newline
            text: "\n"
      - kind: DimStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Pid
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: IntegerKeyword
            text: Integer
          - kind: Newline
            text: "\n"
